Mon Sep 15 11:11:04 2008  Tanaka Akira  <akr@fsij.org>

	* transcode_data.h (rb_transcoder): resetsize_func and resetstate_func
	  also returns ssize_t.

	* enc/trans/iso2022.trans: follow the type change.

Mon Sep 15 10:28:10 2008  Yuki Sonoda (Yugui)  <yugui@yugui.jp>

	* test/matrix/test_matrix.rb (setup): typo.
	  (test_equality): misdefinition of the expected working.
	  Reported by an anonymous user.
	  (test_hash): added.

	* test/matrix/test_vector.rb: ditto.

Mon Sep 15 03:33:10 2008  Tanaka Akira  <akr@fsij.org>

	* transcode_data.h: return output functions ssize_t.

	* transcode.c (transcode_restartable0): don't need to cast the result
	  of output functions.

	* enc/trans/newline.trans: follow the type change.

	* enc/trans/escape.trans: ditto.

	* enc/trans/utf_16_32.trans: ditto.

	* enc/trans/iso2022.trans: ditto.

	* enc/trans/japanese.trans: ditto.

Mon Sep 15 03:04:29 2008  Tanaka Akira  <akr@fsij.org>

	* transcode_data.h: output function takes output buffer size.

	* transcode.c: give output buffer size for output functions.

	* enc/trans/newline.trans: follow the type change.

	* enc/trans/escape.trans: ditto.

	* enc/trans/utf_16_32.trans: ditto.

	* enc/trans/iso2022.trans: ditto.

	* enc/trans/japanese.trans: ditto.

Mon Sep 15 02:37:19 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* transcode.c (str_encode): returns duplicated string if nothing
	  changed.  [ruby-core:18578]

Sun Sep  14 22:09:01 2008  Takeyuki Fujioka  <xibbar@ruby-lang.org>

	* lib/cgi/core.rb (CGI::parse): performance improvement

Sun Sep 14 18:33:32 2008  Tadayoshi Funaba  <tadf@dotrb.org>

	* complex.c: trivial changes.

Sun Sep 14 16:15:22 2008  Yuki Sonoda (Yugui)  <yugui@yugui.jp>

	* lib/matrix.rb (Vector#eql?): typo of the method name as "eqn?".
	  (Vector#eqn?): removed. Defined by mistake.
	  Fixes [ruby-dev:36294]. Reported by weda <weda AT
	  issp.u-tokyo.ac.jp> and an anonymous user.

	* test/matrix/test_matrix.rb: added.
